(FEAT) Image list

--- a/feature-image-search/src/main/res/values/strings.xml
+++ b/feature-image-search/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Flickr</string>
+    <string name="enter_text_here">Enter text here</string>
+    <string name="search">Search</string>
 </resources>
