--- a/feature-image-search/src/main/res/values/strings.xml
+++ b/feature-image-search/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Flickr</string>
     <string name="enter_text_here">Enter text here</string>
     <string name="search">Search</string>
+    <string name="search_input_hint">Enter text for searching</string>
 </resources>
