--- a/feature-image-search/src/main/res/values/strings.xml
+++ b/feature-image-search/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="enter_text_here">Enter text here</string>
     <string name="search">Search</string>
     <string name="search_input_hint">Enter text for searching</string>
+    <string name="loading_error">Loading error</string>
 </resources>
